fix: dynamic method locations and substitutions.